[tool.poetry]
name = "httpx-timeout"
version = "0.1.0"
description = ""
authors = ["Victor Lima <victoraugustolls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.3"
httpx = "^0.11.1"
fastapi = "^0.49.0"
gunicorn = "^20.0.4"
uvicorn = "^0.11.7"
aiohttp = "^3.6.2"
cchardet = "^2.1.5"
aiodns = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
